components/ingress-rules/overlays/management/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /argocd/?(.*)
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
      - path: /grafana/?(.*)
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
